Fix image overflow, update component layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,11 +37,24 @@ main {
 }
 .component {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0;
     border-radius: 1rem;
     background-color: var(--softviolet);
+    overflow: hidden;
+    max-width: 1200px;
+}
+.description {
+    width: 50%;
+    padding: 3rem;
+}
+.image {
+    width: 50%;
 }
 .image>img {
     display: block;
+    width: 100%;
 }
 /* footer */
 footer {
